Fixed white spaces around main content

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,32 +3,6 @@
     font-family: 'Alata', sans-serif;
 }
 
-// button.navbar-toggler[aria-expanded="false"]{
-//     background-image: url('/assets/icons/icon-hamburger.svg');
-//     background-position: center center;
-//     background-repeat: no-repeat;
-//     background-size: contain;
-//     height: 4vh;
-// }
-
-// button.navbar-toggler[aria-expanded="true"]{
-//     background-image: url('/assets/icons/icon-close.svg');
-//     background-position: center center;
-//     background-repeat: no-repeat;
-//     background-size: contain;
-//     height: 4vh;
-// }
-
-// .spacing {
-//     padding: 10vh 0;
-// }
-
-// @media only screen and (max-width: 480px) {
-//     .uppercase {
-//         text-transform: uppercase;
-//     }
-// }
-
 .header-text-container {
     position: relative;
     z-index: 1;
@@ -37,7 +11,7 @@
 }
 
 .header-text {
-    margin: 0 2.5vh;
+    margin: 0 4.5vh;
     padding: 2vh;
     text-align: left;
     vertical-align: middle;
