--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,7 @@ div.row>.tag {
 }
 
 .info-mobile {
-    width: 75%;
+    width: 85%;
     height: auto;
+    margin-top: 5%;
 }
